tests/fail/parametrik-polimorfizm.kip
(bu öğe listesinin) (f işleviyle) eşlemi,
  bu boşsa,
    boş,
  ilkin devama ekiyse,
    (ilk f) (devamın f'yle eşlemine) ekidir.

(bu tam-sayının) bir-fazlası,
  bunun 1'le toplamıdır.

((1'in boşa ekinin) bir-fazlasıyla eşlemini) yaz.
